Update .gitignore to include all tmp files and retain .gitkeep

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 __pycache__/
 /evaluation/**/tmp/*
-!tmp/fastdata/.gitkeep
+tmp/**/*
+!tmp/**/.gitkeep
 /preset/**/initial/
 /preset/**/gen*/
 /preset/**/stamps/
