--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -152,5 +152,6 @@ ENV ENTRY_ROOT=/elfuzz
 ENV PATH=/home/appuser/.local/bin:$PATH
 RUN pipx install "pyexcel-cli==0.0.3"
 RUN pipx inject pyexcel-cli "pyexcel-xlsx==0.6.1"
+RUN pip install "pandas==2.3.0" "openpyxl==3.1.5" "xlsxwriter==3.2.5"
 
 ENTRYPOINT ["/usr/bin/bash"]
